# MSP430

./: CMakeLists.txt  MSP430F2274.dep  MSP430F2274.ewd  MSP430F2274.ewp  MSP430F2274.ewt  MSP430F2274.eww  README.md  adc.c  adc.h  ads1292.c  ads1292.h  commands.c  commands.h  core_inits.c  core_inits.h  databatch.c  databatch.h  interrupts.h  leds.h  main.c  msp430f2274.h  ringbuffer.h  uart_spi.c  uart_spi.h  utypes.h
